--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -2,6 +2,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/detail_coordinator_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/background_light"
@@ -29,14 +30,26 @@
             >
 
             <ImageView
+                android:id="@+id/detail_backdrop_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/detail_backdrop_image"
                 android:scaleType="centerCrop"
                 android:layout_gravity="center"
-                android:src="@drawable/placeholder_backdrop"
                 android:fitsSystemWindows="true"
                 app:layout_collapseMode="parallax"
+                tools:src="@drawable/placeholder_backdrop"
+                />
+            <ImageButton
+                android:id="@+id/detail_play_btn"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/ic_play_circle_fill_24dp"
+                android:scaleType="centerCrop"
+                android:alpha=".70"
+                android:layout_gravity="center"
+                android:background="@null"
+                app:layout_collapseMode="parallax"
+                android:visibility="gone"
                 />
 
             <android.support.v7.widget.Toolbar
