--- a/app/src/main/res/layout/movie_grid.xml
+++ b/app/src/main/res/layout/movie_grid.xml
@@ -6,5 +6,5 @@
     android:layout_height="match_parent"
     android:layout_marginLeft="0dp"
     android:layout_marginRight="0dp"
-    tools:context=".MovieListActivity"
+    tools:context=".ui.activity.MovieGridActivity"
     tools:layout="@layout/fragment_movie_grid" />
