--- a/app/src/main/res/layout/content_movie_info.xml
+++ b/app/src/main/res/layout/content_movie_info.xml
@@ -39,23 +39,67 @@
                 android:textColor="@android:color/black"
                 tools:text="Zootopia" />
 
-            <TextView
-                android:id="@+id/tv_release_date"
+            <TableLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:textSize="16sp"
-                tools:text="2016-04-27" />
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/tv_genre"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:textSize="16sp"
-                android:maxLines="2"
-                android:ellipsize="end"
-                tools:text="Animation" />
+                <TableRow android:layout_marginTop="4dp">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="4dp"
+                        android:src="@drawable/ic_date_24dp"/>
+
+                    <TextView
+                        android:id="@+id/tv_release_date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:textSize="16sp"
+                        android:gravity="center_vertical"
+                        tools:text="2016-04-27" />
+
+                </TableRow>
+
+                <TableRow android:layout_marginTop="4dp">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="4dp"
+                        android:src="@drawable/ic_star_24dp"/>
+
+                    <TextView
+                        android:id="@+id/tv_vote"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:textSize="16sp"
+                        tools:text="9.0/10" />
+
+                </TableRow>
+
+                <TableRow android:layout_marginTop="4dp">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="4dp"
+                        android:src="@drawable/ic_label_24dp"/>
+
+                    <TextView
+                        android:id="@+id/tv_genre"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="16sp"
+                        android:maxLines="2"
+                        android:ellipsize="end"
+                        tools:text="AnimationAnimationAnimationAnimationAnimation" />
+
+                </TableRow>
+
+            </TableLayout>
 
         </LinearLayout>
 
